<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <Button
            android:id="@+id/login_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="14sp"
            android:layout_gravity="end"
            android:layout_margin="16dp"
            android:backgroundTint="@color/white"
            android:textColor="#3B84F1"
            android:padding="6dp"
            >
        </Button>
        
        <ImageView
            android:id="@+id/logo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/icon_account_logo"
            android:contentDescription="@string/account_logo"
            >

        </ImageView>

        <EditText
            android:id="@+id/full_name_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/full_name_hint"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            >
        </EditText>

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/email_hint"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            >
        </EditText>

        <EditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/phone_hint"
            android:autofillHints="phone"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            >
        </EditText>

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/username_hint"
            android:autofillHints="username"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            >

        </EditText>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password_hint"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            >
        </EditText>

        <Button
            android:id="@+id/register_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/white"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="#3B84F1"
            android:textSize="20sp"
            >

        </Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>